2013-11-30  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (build_fh_pc): When creating an archetype, use native name
	rather than unix name if name doesn't exist.

2013-11-29  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 27.

2013-11-13  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* include/cygwin/stdlib.h(initstate, random, setstate, srandom) :
	Prototype if not __STRICT_ANSI__ or _XOPEN_SOURCE is defined appropriately.

2013-11-28  Alexey Pavlov  <alexpux@gmail.com>

	* include/glob.h: Fix invalid use of 'restrict' error.

2013-11-27  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Enhance debug output in case reopen fails.

2013-11-27  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Drop fh_dup, reuse tmp_fh instead.

2013-11-27  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Take additional parameter to get file open
	flags.  If the file to move to the bin has been opened casesensitive,
	reopen it caseinsensitive.  Explain why.  Revert the default name of
	the Vista-and-later recycler to mixed case for readability.
	(unlink_nt): Call try_to_bin with file open flags as evaluated.

2013-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (wcscoll): Add "__restrict" to definition.
	(wcsxfrm): Ditto.

2013-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* common.din: Export posix_spawn[...] functions.
	* exec.cc (execve): Add EXPORT_ALIAS _execve.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.
	* posix.sgml (std-susv4):  Add posix_spawn[...] here.
	(std-notimpl): Drop here.

2013-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (strcoll): Add "__restrict" to definition.
	(strxfrm): Ditto.

2013-11-25  Corinna Vinschen  <corinna@vinschen.de>

	Throughout, keep function definitions and declarations in sync with
	newlib in terms of C99 "restrict" keyword.
